// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildWindow layout render SnackbarContent and could be closed correctly 1`] = `
Array [
  Object {
    "error": false,
    "payload": Object {},
    "type": "REDUX_OPENFIN::SET_AS_FOREGROUND",
  },
  Object {
    "error": false,
    "payload": Object {},
    "type": "REDUX_OPENFIN::MINIMIZE",
  },
  Object {
    "type": "APPLICATION_TOGGLE_WINDOW_STATE",
  },
  Object {
    "error": false,
    "payload": Object {
      "force": false,
    },
    "type": "REDUX_OPENFIN::CLOSE",
  },
  Object {
    "payload": Object {
      "open": false,
    },
    "type": "APPLICATION_SET_SNACKBAR_STATUS",
  },
]
`;

exports[`ChildWindow layout render in normal state correctly by default 1`] = `
Array [
  Object {
    "error": false,
    "payload": Object {},
    "type": "REDUX_OPENFIN::SET_AS_FOREGROUND",
  },
  Object {
    "error": false,
    "payload": Object {},
    "type": "REDUX_OPENFIN::MINIMIZE",
  },
  Object {
    "type": "APPLICATION_TOGGLE_WINDOW_STATE",
  },
  Object {
    "error": false,
    "payload": Object {
      "force": false,
    },
    "type": "REDUX_OPENFIN::CLOSE",
  },
  Object {
    "payload": Object {
      "event": undefined,
      "reason": undefined,
    },
    "type": "APPLICATION_CLOSE_SNACKBAR",
  },
  Object {
    "type": "APPLICATION_PROCESS_SNACKBAR_QUEUE",
  },
]
`;
